package com.company;

public interface CanRun {

    public void toRun();

    public double getSpeed();

    public void setSpeed(double speed);


}
