package com.company;

public enum Flowers {DAISY, CHAMOMILE, TULIP, PANSY}
