package com.company;

public abstract class Situation {

    protected long timeToStart;

    public void toTakeAnUnwantedTurn(DogWhoCanBeAPurpose dogWhoCanBeAPurpose, ShortyWhoCanBeAPursuer shortyWhoCanBeAPursuer, Home home, Shorty shorty){}

}
