package com.company;

public interface TerritoryDecoration {

    public void beDamaged(CanRun canRun, String description);


}
