package com.company;

public enum WayToBeRippedOut {WITH_ROOT, WITHOUT_ROOT}
